fix: spacing between social icons

--- a/assets/scss/_post-author.scss
+++ b/assets/scss/_post-author.scss
@@ -9,9 +9,6 @@ a:has(> i.social-icon) {
 i.social-icon {
     color: var(--main-text-color) !important;
     font-size: 18px;
-    width: 30px;
-    padding: 2px;
-    margin: 2px;
 
     img {
         height: 18px;
